--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
 	<meta charset="utf8">
 	<meta name="viewport" content="width=device-width">
 	<link rel="stylesheet" href="style.css">
-	<title>9章演習問題</title>
+	<title>10章課題</title>
 </head>
 <body>
 	<main class="clearfix">
 		<section class="guide">
 			<p class="step-number">step1</p>
 			<img class="guide-image" src="img/flow01.png">
-			<!--h1→h3に変更。h1ほどの見出しではない。-->
 			<h3 class="title">タイトルが入ります</h3>
 			<p>文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。</p>
 		</section>
